# yanet

./: .clang-format  .dockerignore  .gitignore  .gitmodules  AUTHORS  Dockerfile.ubuntu  Dockerfile.ubuntu.deb  README-devel.md  README.md  autotest  build.sh  get_res.sh  libprotobuf  librib  meson.build  meson_options.txt  rib_saved.dmp  unwind  vizualize.py  yanet  yanet-announcer.py  yanet-cli.bash_completion  yanet-cli.zsh_completion  yanet-init.sh  yanet-rebind.sh  yanet-wrapper  yanet.Dockerfile
autotest/: autotest.cpp  autotest.h  common.h  main.cpp  meson.build  yanet-autotest-run.py
autotest/units/001_one_port/: dataplane.conf
autotest/units/001_one_port/001_default/: expect.pcap
autotest/units/001_one_port/002_decap_default/: send.pcap
autotest/units/001_one_port/003_ecmp/: controlplane.conf
autotest/units/001_one_port/004_decap_ecmp/: controlplane.conf
autotest/units/001_one_port/005_decap_dscp/: autotest.yaml  expect.pcap  gen.py
autotest/units/001_one_port/005_nat64stateless_dscp/: 001-expect.pcap  001-send.pcap  controlplane.conf  gen.py
autotest/units/001_one_port/005_tun64_dscp/: autotest.yaml  controlplane.conf  decap.pcap  gen.py
autotest/units/001_one_port/006_promiscuous_mode/: expect.pcap  gen.py
autotest/units/001_one_port/007_decap_gre/: autotest.yaml  expect.pcap  gen.py  send.pcap
autotest/units/001_one_port/009_nat64stateless/: 001-expect.pcap  001-send.pcap  003-send.pcap  004-expect.pcap  004-send.pcap  005-send.pcap  006-send.pcap  008-send.pcap  009-expect.pcap  009-send.pcap  010-send.pcap  controlplane.conf  gen.py
autotest/units/001_one_port/010_nat64stateless_checksum/: 003-expect.pcap  004-send.pcap  autotest.yaml  gen.py
autotest/units/001_one_port/011_nat64stateless_pool/: 001-expect.pcap  001-send.pcap  002-expect.pcap  002-send.pcap  autotest.yaml  controlplane.conf  gen.py
autotest/units/001_one_port/012_decap_nat64stateless/: 001-expect.pcap  001-send.pcap  002-expect.pcap  002-send.pcap  autotest.yaml  controlplane.conf  gen.py
autotest/units/001_one_port/013_nat64stateless_multi_pool/: gen.py  (+7 more)
cli/: acl.h  balancer.h  bus.h  config.cpp  config.h  convert.h  converter.h  develop.h  dregress.h  helper.h  influxdb_format.h  latch.h  limit.h  main.cpp  memory_manager.h  meson.build  nat46clat.h  nat64stateful.h  neighbor.h  proxy.h  rib.h  ringlog.h  route.h  show.h  table_printer.h  tcpdump.cpp  tcpdump.h  telegraf.h
cli/src/: balancer.h  config.cpp  config.h  helper.h  influxdb_format.h  latch.h  limit.h  main.cpp  nat64stateful.h  show.h  telegraf.h
cli/unittest/: call.cpp  meson.build  unittest.cpp
common/unittest/: bits.cpp  blocks_allocator.cpp  meson.build  shared_memory.cpp  static_vector.cpp  tuple.cpp  variant_trait_map.cpp
controlplane/: acl.cpp  acl.h  acl_base.h  acl_compiler.cpp  acl_compiler.h  acl_filter.cpp  acl_filter.h  acl_flat.h  acl_network.h  acl_network_table.cpp  acl_network_table.h  acl_rule.h  acl_table.h  acl_total_table.cpp  acl_total_table.h  acl_transport.cpp  acl_transport.h  acl_transport_table.cpp  acl_transport_table.h  acl_tree.h  acl_value.cpp  acl_value.h  balancer.cpp  balancer.h  base.h  bird.h  bus.cpp  bus.h  common.h  configconverter.cpp  configconverter.h  configparser.cpp  configparser.h  controlplane.cpp  controlplane.h  counter.h  dregress.cpp  dregress.h  durations.cpp  durations.h  (+31 more)
controlplane/acl/: bitset.h  dict.h  network.h  rule.h
controlplane/src/: acl.cpp  acl.h  acl_base.h  acl_compiler.cpp  acl_compiler.h  acl_filter.h  acl_flat.h  acl_network.h  acl_network_table.cpp  acl_network_table.h  acl_rule.h  acl_total_table.cpp  acl_transport.cpp  acl_transport.h  acl_transport_table.cpp  acl_transport_table.h  acl_tree.h  acl_value.cpp  acl_value.h  balancer.cpp  base.h  bus.cpp  configconverter.cpp  configparser.cpp  controlplane.cpp  counter.h  dregress.h  durations.cpp  fqdn.h  isystem.cpp  isystem.h  main.cpp  module.cpp  module.h  nat64stateful.cpp  protobus.cpp  route.cpp  route.h  telegraf.cpp  telegraf.h  (+1 more)
controlplane/src/acl/: rule.h
controlplane/unittest/: acl.cpp  acl_flat.cpp  acl_network.cpp  acl_table.cpp  acl_tree.cpp  meson.build  ndarray.cpp  network.cpp  parser.cpp  segment_allocator.cpp  type.cpp
controlplane/unwind/: unwind.cpp
dataplane/: action_dispatcher.h  base.h  burst.h  bus.cpp  bus.h  checksum.h  common.h  config.h  config_values.h  controlplane.cpp  controlplane.h  dataplane.cpp  dataplane.h  debug_latch.h  dpdk.cpp  dpdk.h  dregress.cpp  dregress.h  dump_ring_pcap.cpp  dump_ring_raw.cpp  dump_rings.cpp  dump_rings.h  dump_rings_meta.h  dynamic_table.h  flat.h  fragmentation.cpp  fragmentation.h  globalbase.cpp  globalbase.h  hashtable.h  hashtable_common.h  hashtable_mod_id32_dynamic.h  icmp.cpp  icmp.h  icmp_translations.cpp  icmp_translations.h  kernel_interface_handle.cpp  kernel_interface_handle.h  kernel_interface_handler.cpp  kernel_interface_handler.h  (+52 more)
dataplane/src/: bus.cpp  bus.h  checksum.h  controlplane.cpp  controlplane.h  dataplane.cpp  dataplane.h  debug_latch.cpp  dregress.cpp  fragmentation.cpp  globalbase.cpp  globalbase.h  hashtable.h  lpm.h  report.cpp  samples.h  sharedmemory.cpp  sharedmemory.h  sock_dev.cpp  type.h  worker.cpp  worker.h  worker_gc.cpp  worker_gc.h
dataplane/unittest/: hashtable.cpp  ip_address.cpp  local_pool.cpp  lpm.cpp  meson.build  neighbor.cpp  proxy.cpp  proxy_syn.cpp  random_prefixes.cpp  random_prefixes.h  sdp.cpp  shared_memory.cpp  syncookies.cpp  vrf_lpm_binary.cpp  vrf_lpm_common.h  vrf_lpm_linear.cpp  vrf_lpm_map.h
libfwparser/: fw_config.cpp  fw_config.h  fw_lexer.cpp  fw_lexer.h  fw_parser.y  meson.build  token.l
libprotobuf/: controlplane.proto  meson.build  meta.proto
librib/: libyabird.cpp  libyabird.h  meson.build
libyabird/: meson.build
libyabird/src/: libyabird.cpp
logger/: main.cpp  meson.build
logger/src/: main.cpp
proxytest/: benchmark.cpp  benchmark.h  main.cpp  meson.build
proxytest/benchmark/: benchmark.cpp  benchmark.h  meson.build  proxytest.cpp
proxytest/limiters/: conn_limit.cpp  limiters.cpp  meson.build  rate_limit.cpp
(+1352 files in other folders)
